# smart-interview-assistant

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
app/: database.py
app/agents/: graph.py  matching_analyst.py  prompts.py  question_generator.py  resume_parser.py  state.py
app/api/: auth.py  deps.py  routes.py  schemas.py
app/memory/: long_term.py  manager.py  pin_store.py  short_term.py
app/models/: db_models.py  schemas.py
app/services/: file_parser.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: LoginPage.tsx  MatchCard.tsx  QuestionsCard.tsx  RegisterPage.tsx  ResumeCard.tsx  StepError.tsx  StepProgress.tsx  StepResult.tsx  StepUpload.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: auth.ts  index.ts
