[project]
name = "smart-interview-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.14.1",
    "langgraph-checkpoint-redis>=0.4.1",
    "python-multipart>=0.0.28",
    "sqlalchemy[asyncio]>=2.0.49",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt==4.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
